--- a/front/setaddpage/css/style.css
+++ b/front/setaddpage/css/style.css
@@ -1,25 +1,22 @@
-.box {
-  width: 500px;
-  height: 289px;
+/* 팝업 컨테이너 스타일 */
+body {
+  margin: 0;
+  padding: 0;
+  background-color: transparent; /* 배경색 투명 */
+  font-family: "Inter-Medium", Helvetica;
 }
 
-.box .POPUP {
-  position: fixed;
-  width: 502px;
-  height: 289px;
-  top: 0;
-  left: 0;
-}
-
-.box .overlap-group {
-  position: relative;
+.overlap-group {
   width: 500px;
   height: 289px;
   background-color: var(--white);
   border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid #c9a7eb; /* 테두리 추가 */
+  position: relative;
 }
 
-.box .search {
+.search {
   width: 440px;
   height: 38px;
   padding: 8px 16px;
@@ -39,7 +36,7 @@
   white-space: nowrap;
 }
 
-.box .select {
+.select {
   left: 373px;
   background-color: var(--purple);
   display: inline-flex;
@@ -47,19 +44,19 @@
   align-items: flex-start;
   gap: 10px;
   padding: 10px 22px;
-  position: absolute;
-  top: 233px;
+  position: relative;
+  top: 80%;
   border-radius: 5px;
 }
 
-.box .content {
+.content {
   width: 55px;
   position: relative;
   height: 18px;
   margin-right: -2.00px;
 }
 
-.box .apply {
+.apply {
   position: absolute;
   top: 0;
   left: 0;
@@ -72,7 +69,7 @@
   white-space: nowrap;
 }
 
-.box .new-note {
+.new-note {
   position: absolute;
   top: 18px;
   left: 195px;
@@ -85,7 +82,7 @@
   white-space: nowrap;
 }
 
-.box .content-wrapper {
+.content-wrapper {
   left: 30px;
   border: 1px solid;
   border-color: var(--purple);
@@ -93,20 +90,20 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
-  padding: 10px 22px;
+  padding: 10px 18px;
   position: absolute;
-  top: 233px;
+  top: 80%;
   border-radius: 5px;
 }
 
-.box .cancel-wrapper {
+.cancel-wrapper {
   width: 68px;
   position: relative;
   height: 18px;
   margin-right: -2.00px;
 }
 
-.box .cancel {
+.cancel {
   position: absolute;
   top: 0;
   left: 0;
