--- a/front/addpage/css/style.css
+++ b/front/addpage/css/style.css
@@ -1,10 +1,11 @@
 .MAIN-light-scheme {
-  background-color: #f7f7f7;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f9;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .MAIN-light-scheme .CONTAINER-wrapper {
@@ -51,34 +52,6 @@
   position: relative;
   flex: 0 0 auto;
   background-color: transparent;
-}
-
-.MAIN-light-scheme .search {
-  display: inline-flex;
-  height: 38px;
-  align-items: center;
-  gap: 436px;
-  padding: 8px 16px;
-  position: relative;
-  flex: 0 0 auto;
-  border-radius: 5px;
-  border: 1px solid;
-  border-color: var(--purple);
-}
-
-.MAIN-light-scheme .search-note {
-  position: relative;
-  width: fit-content;
-  font-family: "Inter-Medium", Helvetica;
-  font-weight: 500;
-  color: #c3c1e5;
-  font-size: 16px;
-  letter-spacing: 0;
-  line-height: 16px;
-  white-space: nowrap;
-  background: transparent;
-  border: none;
-  padding: 0;
 }
 
 .MAIN-light-scheme .vector {
